...
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Upload Recipe Icon -->
    <ImageView
        android:id="@+id/addRecipeButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/upload_recipe"
        android:src="@drawable/upload_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
...
        app:layout_constraintTop_toBottomOf="@id/headerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Recipes RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_recipes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchRecipesEditText"
        app:layout_constraintStart_toStartOf="parent"
...
